# m2i-dataops

./: README.md  drift_report.html  pyproject.toml
data/: dataset.csv.dvc  update.json
jaffle_shop_bigquery/: Dockerfile  REQS.md  dbt_project.yml  profiles.yml
jaffle_shop_bigquery/models/: sources.yml
jaffle_shop_bigquery/models/staging/: stg_customers.sql  stg_orders.sql  stg_payments.sql
jaffle_shop_duckdb/: .user.yml  REQS.md  jaffle_shop.duckdb
mlruns/.trash/699098704599409615/: meta.yaml
mlruns/.trash/699098704599409615/3888f68c46e34dc8b4631d870327ec7f/: meta.yaml
mlruns/.trash/888751738011530222/: meta.yaml
mlruns/.trash/888751738011530222/1bd96554280b4f48824918ce80c7ef04/: meta.yaml
mlruns/.trash/888751738011530222/94b74637ee3d4e2a9fc306c10c5b3e9a/: meta.yaml
mlruns/0/: meta.yaml
mlruns/223244017466310868/: meta.yaml
mlruns/223244017466310868/0e1addd9a03b4508aec7ddf25c990f36/: meta.yaml
mlruns/223244017466310868/0e1addd9a03b4508aec7ddf25c990f36/metrics/: accuracy
mlruns/223244017466310868/0e1addd9a03b4508aec7ddf25c990f36/tags/: mlflow.log-model.history  mlflow.runName  mlflow.source.name
mlruns/223244017466310868/191d2e690bad4a9fb126800aeb1340fe/: meta.yaml
mlruns/223244017466310868/191d2e690bad4a9fb126800aeb1340fe/metrics/: accuracy
mlruns/223244017466310868/191d2e690bad4a9fb126800aeb1340fe/tags/: Training Info  mlflow.log-model.history  mlflow.runName  mlflow.source.git.commit  mlflow.source.name
mlruns/223244017466310868/8111267202e54ef4bae0d0ec29ba27d8/: meta.yaml
mlruns/223244017466310868/8111267202e54ef4bae0d0ec29ba27d8/metrics/: accuracy
mlruns/223244017466310868/8111267202e54ef4bae0d0ec29ba27d8/tags/: Training Info  mlflow.log-model.history  mlflow.runName  mlflow.source.name
mlruns/models/iris-k-neighbors/: meta.yaml
mlruns/models/iris-lr/: meta.yaml
mlruns/models/iris-tree/: meta.yaml
mlruns/models/tracking-prd/: meta.yaml
mlruns/models/tracking-quickstart/: meta.yaml
src/dataops/: delta_spark.py
src/dataops/dags/: REQS.md  dbt.py  users.py  users_bucket.py
src/dataops/mlflow/: drift.py  k_neighbors.py  logistic_regression.py  tree.py
(+24 files in other folders)
