[project]
name = "dataops"
version = "0.1.0"
description = ""
authors = [
    {name = "ebenkara15",email = "erwan.benkara@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "dvc (>=3.59.2,<4.0.0)",
    "mlflow (>=2.22.0,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "evidently (>=0.7.6,<0.8.0)",
    "dbt-duckdb (>=1.9.3,<2.0.0)",
    "elementary-data (>=0.18.3,<0.19.0)",
    "delta-spark (>=3.3.2,<4.0.0)",
    "delta (>=0.4.2,<0.5.0)",
]

[tool.poetry]
packages = [{include = "dataops", from = "src"}]

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.12"
mypy = "^1.16.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
